# Reels_Automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-space.yml
scripts/: deploy_to_huggingface.py
src/social_reels_automation/: __init__.py  config.py  main.py  models.py
src/social_reels_automation/clients/: anthropic_client.py  content_strategy_client.py  gemini_client.py  higgsfield_client.py  instagram_client.py  prompt_builder.py  trend_client.py  youtube_client.py
src/social_reels_automation/services/: audience_targeting.py  automation_service.py  content_pipeline.py
src/social_reels_automation/static/: app.js  styles.css
src/social_reels_automation/templates/: index.html  setup.html
